# agentrpc

./: .gitignore  README.md
.github/workflows/: build.yml  check-package-changes.yml  conventional-commits.yml
docs/: docs.json  how-it-works.mdx  introduction.mdx  package-lock.json  package.json  quickstart.mdx  sdks.mdx
docs/integrations/: anthropic.mdx  mcp-server.mdx  openai.mdx  openrouter.mdx  overview.mdx
docs/scripts/: generate-snippets.ts  tsconfig.json
docs/snippets/: node-openai-completions-claude.mdx  node-openai-completions-openrouter.mdx  node-openai-completions.mdx  node-openai.mdx  node-register.mdx  openai-agents-python.mdx  openai-completions-claude-node.mdx  openai-completions-claude-python.mdx  openai-completions-node.mdx  openai-completions-openrouter-node.mdx  openai-completions-openrouter-python.mdx  openai-completions-python.mdx  openai-node.mdx  python-openai-agents.mdx  python-openai-completions-claude.mdx  python-openai-completions-openrouter.mdx  python-openai-completions.mdx  register-go.mdx  register-node.mdx
docs/tools/: dotnet.mdx  go.mdx  overview.mdx  python.mdx  (+1 more)
examples/: README.md
examples/python/: Makefile  openai-agents.py  openai-completions-claude.py  openai-completions-openrouter.py  openai-completions.py  pyproject.toml
sdk-go/: Makefile  README.md  agentrpc.go  agentrpc_test.go  go.mod  go.sum  inferable.go  interrupt.go  main_test.go  polling.go  service_test.go
sdk-node/: README.md  package-lock.json  package.json  tsconfig.build.json
sdk-python/: .gitignore  INTERNAL.md  Makefile  README.md  pyproject.toml
(+54 files in other folders)
